update gradle, add build instructions to README.md, update gitignore

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Dec 26 21:45:38 EST 2018
+#Thu Dec 19 18:56:14 EST 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-bin.zip
+zipStoreBase=GRADLE_USER_HOME
