--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'andrewoid.neuralnetwork.CalculatorNetworkTraining'
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
