--- a/example/build.gradle
+++ b/example/build.gradle
@@ -8,6 +8,13 @@ repositories {
     mavenCentral()
 }
 
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'andrewoid.neuralnetwork.CalculatorNetworkTraining'
+    }
+}
+
 dependencies {
     implementation project(':library')
     testCompile group: 'junit', name: 'junit', version: '4.12'
